# dias

./: Cargo.toml  README.md
example/serverless-lambda-gql/template/: package.json.hbs  serverless.yml.hbs
example/serverless-lambda-gql/template/src/: index.ts.hbs
example/serverless-lambda-gql/template/src/resolvers/: index.ts.hbs
example/serverless-lambda-gql/template/src/schema/: index.ts.hbs
serverless-lambda-gql/: manifest.yml
serverless-lambda-gql/template/: ts-config.json.hbs
src/: main.rs
src/manifest/: mod.rs
src/template/: mod.rs
