[package]
name = "dias"
version = "0.1.0"
authors = ["bgoodman <b@thebgoodman.com>"]
edition = "2018"

[dependencies]
handlebars = "3.4.0"
serde_json = "1.0.57"
yaml-rust = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
dialoguer = "0.6.2"
console = "0.12.0"
walkdir = "2"
pathdiff = "0.2.0"
clap = "2.33.3"